@@ -22,5 +22,5 @@ Masahiro Inamura - Japanese
 Matsuu Takuto - Japanese
 Carlos Schlyter - Portugese
 andriykopanytsia - Ukranian
-Antal Zoltán - Hungarian
+intel - Hungarian
 H Vanek - Czech
